src/test/ui/consts/const-eval/issue-85907.stderr
error: argument to `panic!()` in a const context must have type `&str`
  --> $DIR/issue-85907.rs:2:5
   |
LL |     panic!(123);
   |     ^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

